cambios en el index

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "type": "git",
     "url": "git+https://github.com/halfanna/LandingFabric-Analia-Albornoz.git"
   },
-  "author": "",
+  "author": "Analia Albornoz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/halfanna/LandingFabric-Analia-Albornoz/issues"
   },
   "homepage": "https://github.com/halfanna/LandingFabric-Analia-Albornoz#readme",
-  "description": ""
+  "description": "Landing Page - Fabric Accesorios"
 }
